[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Interface/Selector.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/Nemo Nightmares.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Menu_GameStart.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Interface/Menu_NewGame.tscn" type="PackedScene" id=4]
[ext_resource path="res://Textures/Interface/SplashImage.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Zombie_Holocaust.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Textures/Interface/Panel_Experience.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 120
outline_size = 3
outline_color = Color( 0.278431, 0.270588, 0.219608, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 38
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[node name="Menu_GameStart" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
margin_bottom = 2.19995
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SplashImage" type="TextureRect" parent="."]
margin_left = 168.0
margin_top = 121.0
margin_right = 1113.0
margin_bottom = 630.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 295.0
margin_top = 13.0
margin_right = 989.0
margin_bottom = 153.0
texture = ExtResource( 7 )
expand = true

[node name="GameNameLbl" type="Label" parent="TextureRect"]
margin_left = 23.0
margin_top = 9.0
margin_right = 649.0
margin_bottom = 144.0
custom_colors/font_color = Color( 1, 0.631373, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Mystical Mansion"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameBtn" type="Button" parent="."]
margin_left = 184.0
margin_top = 623.0
margin_right = 487.0
margin_bottom = 696.0
custom_colors/font_color_hover = Color( 0.627451, 0.945098, 0.360784, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.403922, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "New Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueBtn" type="Button" parent="."]
margin_left = 488.0
margin_top = 623.0
margin_right = 791.0
margin_bottom = 696.0
custom_colors/font_color_hover = Color( 0.627451, 0.945098, 0.360784, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.403922, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGameBtn" type="Button" parent="."]
margin_left = 792.0
margin_top = 623.0
margin_right = 1095.0
margin_bottom = 696.0
custom_colors/font_color_hover = Color( 0.627451, 0.945098, 0.360784, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.403922, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Quit Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_NewGame" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = 271.0
margin_top = 219.0
margin_right = -504.0
margin_bottom = -266.0

[node name="Selector" parent="." instance=ExtResource( 1 )]
visible = false
margin_left = 824.0
margin_top = 636.0
margin_right = 1055.0
margin_bottom = 690.0
expand = true

[connection signal="pressed" from="NewGameBtn" to="." method="_on_NewGameBtn_pressed"]
[connection signal="pressed" from="ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
[connection signal="pressed" from="QuitGameBtn" to="." method="_on_QuitGameBtn_pressed"]
